states/03-service-mesh/solo-demo/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traderx-mesh
  labels:
    istio-injection: enabled
