states/03-service-mesh/solo-demo/manifests/peerauthentication-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: traderx-mesh
spec:
  mtls:
    mode: STRICT
