states/03-service-mesh/solo-demo/manifests/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: trade-service
  namespace: traderx-mesh
spec:
  host: trade-service.traderx-mesh.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
