states/03-service-mesh/solo-demo/manifests/virtualservice-trade-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: trade-service
  namespace: traderx-mesh
spec:
  hosts:
    - trade-service.traderx-mesh.svc.cluster.local
  gateways:
    - traderx-gateway
  http:
    - route:
        - destination:
            host: trade-service.traderx-mesh.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: trade-service.traderx-mesh.svc.cluster.local
            subset: v2
          weight: 10
