states/03-service-mesh/solo-demo/manifests/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: traderx-mesh
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
